--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <div class="col-lg-11">
                                 <div class="hero__caption">
                                     <h1 data-animation="fadeInUp" data-delay=".5s" data-key="hero-title">
-                                        An innovative and client-focused law firm delivering exceptional results.<br>
+                                        An innovative and client-focused law firm.<br>
                                     </h1>
                                     <div class="hero-text2 mt-110" data-animation="fadeInUp" data-delay=".9s">
                                         <span><a data-key="hero-title1" href="services.html">UAE based Firm.
@@ -128,7 +128,7 @@
                     <div class="front-text">
                         <h2 data-key="service-title">Our <br> Services</h2>
                     </div>
-                    <span class="back-text">services</span>
+                     
                 </div>
         
                 <section class="project-area  section-padding30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
