--- a/servises/criminal-law.html
+++ b/servises/criminal-law.html
@@ -119,7 +119,7 @@
                 <div class="single-services section-padding2">
                     <div class="details-caption">
                         <h3 data-key="service3">Criminal Law</h3>
-                        <p class="mb-50" data-key="service3-description">Our criminal law and compliance services in the UAE are designed to provide expert guidance and robust defense. With a deep understanding of the complexities of UAE criminal law and the Dubai justice system, our team of seasoned lawyers ensures comprehensive support throughout every stage of your case. From sound legal advice to developing effective, tailored defense strategies, we are committed to protecting your rights and achieving the best possible outcomes.</p>
+                        <p class="mb-50" data-key="service3-description">Our criminal law and compliance services in the UAE are designed to provide expert guidance and robust defense. With a deep understanding of the complexities of UAE criminal law and the Dubai justice system ensures comprehensive support throughout every stage of your case. From sound legal advice to developing effective, tailored defense strategies, we are committed to protecting your rights and achieving the best possible outcomes.</p>
                         <!-- Styled List -->
                         <h3 class="mt-5" data-key="service3-key">Key areas of our criminal law services include:</h3>
                         <ul class="styled-list">
