--- a/servises/wills-law.html
+++ b/servises/wills-law.html
@@ -118,7 +118,7 @@
             <div class="col-12">
                 <div class="single-services section-padding2">
                     <div class="details-caption">
-                        <h3 data-key="service6">Wills Law</h3>
+                        <h3 data-key="service6">Wills</h3>
                         <p class="mb-50" data-key="service6-description">Wills Law covers the legal process of drafting a will, ensuring that your assets are distributed according to your wishes after your passing. In the UAE, a will must comply with both local and international regulations to be legally recognized. Our expert team provides assistance in drafting wills that ensure your estate is handled smoothly, minimizing potential disputes and ensuring that your family is provided for according to your intentions.</p>
                         
                         <h3 class="mt-5" data-key="service6-key">Key Areas of Wills Law Include:</h3>
