--- a/team/member1.html
+++ b/team/member1.html
@@ -97,7 +97,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="hero-cap pt-100">
-                                <h2>Denis Acker</h2>
+                                <h2 data-key="team-name1">Denis Acker</h2>
                                 <nav aria-label="breadcrumb ">
                                     <ol class="breadcrumb">
                                         <li class="breadcrumb-item"><a href="../index.html" data-key="nav-home">Home</a></li>
@@ -118,18 +118,30 @@
             <!-- Section Title -->
             <div class="section-tittle section-tittle2 mb-55">
                 <div class="front-text">
-                    <h2>Denis Acker</h2>
+                    <h2 data-key="team-name1">Denis Acker</h2>
                 </div>
             </div>
             <div class="support-caption">
-                <p class="pera-top">Advocates & Legal Consultants</p>
-                <p>Denis Acker, Founding Partner Of Acker Choquette  is a Canadian Attorney co-founder of the Legal Consultancy Firm Acker Choquette which is operating out of Dubai.
-                    Denis is a member of the Quebec Bar Association with over twenty years of experience.
-                   He is specialized in Company Formation, Establishment of Trusts and Foundations as well as Investment Immigration.
-                   He gives guidance to foreign investors in their projects of establishment in Malta and further afield in other EU countries.
-                   </p>
-                   <a href="../services.html" class="btn red-btn2" data-key="service-title">Our Services</a>
+                <p class="pera-top" data-key="team-job1">Advocates & Legal Consultants</p>
+                <p data-key="team1-desc" class="pera-bottom">
+                    <a href="https://ackerchoquette.legal/partners-at-acker-choquette/">Denis Acker</a>, Founding Partner of 
+                    <a href="#">Acker Choquette</a>, is a 
+                    <a href="https://www.barreau.qc.ca/en/" target="_blank">Canadian Attorney</a> and co-founder of the 
+                    <a href="../index.html">Legal Consultancy Firm Acker Choquette</a>, which operates out of Dubai.<br><br>
+                    Denis is a member of the 
+                    <a href="https://www.barreau.qc.ca/en/" target="_blank">Quebec Bar Association</a> with over twenty years of experience. 
+                    He specializes in 
+                    <a href="../servises/company-law.html">Company Formation</a>, 
+                    <a href="#">Establishment of Trusts and Foundations</a>, 
+                    as well as 
+                    <a href="../servises/legal-Imegration.html">Investment Immigration</a>.<br><br>
+                    He offers guidance to foreign investors on their projects for establishment in 
+                    <a href="https://maltabusinessregistry.com/" target="_blank">Malta</a> and other 
+                    <a href="../servises/business-uae.html">EU countries</a>.
+                </p>
+                <a href="../services.html" class="btn red-btn2" data-key="service-title">Our Services</a>
             </div>
+            
 
         </div>
 
@@ -154,15 +166,15 @@
             </div>
             <div class="col-lg-6" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">
                 <div class="section-tittle mb-55">
-                    <h2>Denis Acker's Achievements</h2>
+                    <h2 data-key="team1-achievments">Denis Acker's Achievements</h2>
                 </div>
                 <div class="achievements-content">
                     <ul class="achievement-list">
-                        <li><i class="fas fa-check-circle"></i> Over 20 years of experience in corporate and investment law.</li>
-                        <li><i class="fas fa-check-circle"></i> Successfully assisted numerous multinational corporations in setting up businesses in the UAE and EU.</li>
-                        <li><i class="fas fa-check-circle"></i> Expert in trust formation and asset protection strategies.</li>
-                        <li><i class="fas fa-check-circle"></i> Recognized for his work in investment immigration and international business structuring.</li>
-                        <li><i class="fas fa-check-circle"></i> Regular speaker at international legal and business conferences.</li>
+                        <li><i class="fas fa-check-circle" data-key="team1-item1"> Over 20 years of experience in corporate and investment law.</i>
+                        <li><i class="fas fa-check-circle" data-key="team1-item2"> Successfully assisted numerous multinational corporations in setting up businesses in the UAE and EU.</i>
+                        <li><i class="fas fa-check-circle" data-key="team1-item3"> Expert in trust formation and asset protection strategies.</i>
+                        <li><i class="fas fa-check-circle" data-key="team1-item4"> Recognized for his work in investment immigration and international business structuring.</i>
+                        <li><i class="fas fa-check-circle" data-key="team1-item5"> Regular speaker at international legal and business conferences.</i>
                     </ul>
                 </div>
             </div>
@@ -176,7 +188,7 @@
 <section class="testimonials-section">
     <div class="container">
         <div class="section-title text-center">
-            <h2>What Our Clients Say</h2>
+            <h2 data-key="team-qst">What's Our Clients Opinion <br> About Us</h2>
         </div>
 
         <div class="testimonials-container">
@@ -236,59 +248,57 @@
 <section class="faq-section pt-100 pb-100">
     <div class="container">
         <div class="section-title text-center mb-55">
-            <h2>Frequently Asked Questions</h2>
+            <h2 data-key="faq-title">Frequently Asked Questions</h2>
         </div>
 
         <div class="faq-container">
             <!-- Question 1 -->
             <div class="faq-item">
                 <div class="faq-question">
-                    <h4>What Is Your Success Rate?</h4>
+                    <h4 data-key="faq-question1">What Is Your Success Rate?</h4>
                     <span class="faq-toggle">▲</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Each case is specific. Our global success rate is 96%.</p>
+                    <p data-key="faq-answer1">Each case is specific. Our global success rate is 96%.</p>
                 </div>
             </div>
 
             <!-- Question 2 -->
             <div class="faq-item">
                 <div class="faq-question">
-                    <h4>Can You Help Me?</h4>
+                    <h4 data-key="faq-question2">Can You Help Me?</h4>
                     <span class="faq-toggle">▲</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Acker Choquette law firm does its best to solve each case and meet the expectations of its clients.</p>
+                    <p data-key="faq-answer2">Acker Choquette law firm does its best to solve each case and meet the expectations of its clients.</p>
                 </div>
             </div>
 
             <!-- Question 3 -->
             <div class="faq-item">
                 <div class="faq-question">
-                    <h4>Can I Contact You At Anytime?</h4>
+                    <h4 data-key="faq-question3">Can I Contact You At Anytime?</h4>
                     <span class="faq-toggle">▲</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Definitely yes! Feel free to send an email or fill the form in our "contact us" section. Our team will respond as soon as possible.</p>
+                    <p data-key="faq-answer3">Definitely yes! Feel free to send an email or fill the form in our "contact us" section. Our team will respond as soon as possible.</p>
                 </div>
             </div>
 
             <!-- Question 4 -->
             <div class="faq-item">
                 <div class="faq-question">
-                    <h4>Are You Looking For New Attorneys?</h4>
+                    <h4 data-key="faq-question4">Are You Looking For New Attorneys?</h4>
                     <span class="faq-toggle">▲</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Not at the moment, but feel free to send your resume to our email address.</p>
+                    <p data-key="faq-answer4">Not at the moment, but feel free to send your resume to our email address.</p>
                 </div>
             </div>
         </div>
     </div>
 </section>
 <!-- FAQ Section End -->
-
-
     <div class="footer-main">
         <div class="footer-area footer-padding">
             <div class="container">
