--- a/contact.html
+++ b/contact.html
@@ -159,13 +159,12 @@
                             <span class="contact-info__icon"><i class="ti-tablet"></i></span>
                             <div class="media-body">
                                 <h3>+971 4 3550004</h3>
-                                <p>+33145531996</p>
                             </div>
                         </div>
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-email"></i></span>
                             <div class="media-body">
-                                <h3> contact@acd@legallaw.eu</h3>
+                                <h3> contact@acdlaw.eu</h3>
                                 <p data-key="contact-msg">Send us your query anytime!</p>
                             </div>
                         </div>
@@ -192,12 +191,7 @@
                                 <ul>
                                     <li data-key="footer-location1"><strong>Dubai:</strong> Khalid Bin Waleed Road, Bank Street Building, 2nd Floor Office 215, Dubai. PO BOX 21602, United Arab Emirates</li>
                                     <li data-key="footer-phone1">Phone: (+971) 4 355 0004</li>
-                                    <li data-key="footer-email">Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
-                                </ul>
-                                <ul>
-                                    <li data-key="footer-location2"><strong>Paris:</strong> 39Bis, Boulevard Exelmans, 75016 Paris</li>
-                                    <li data-key="footer-phone2">Phone: (+33) 145531996</li>
-                                    <li data-key="footer-email">Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
+                                    <li data-key="footer-email">Email: <a href="mailto: contact@acdlaw.eu"> contact@acdlaw.eu</a></li>
                                 </ul>
                             </div>
                         </div>
