--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
                                                         <img src="assets/img/service/servicess3.webp" alt="">
                                                     </div>
                                                     <div class="project-cap">
-                                                        <a href="servises/wills-law.html" class="plus-btn"><i class="fas fa-home"></i></a>
-                                                       <h4><a href="servises/wills-law.html" data-key="service6">WILLS LAW</a></h4>
+                                                        <a href="servises/WILL-law.html" class="plus-btn"><i class="fas fa-home"></i></a>
+                                                       <h4><a href="servises/WILL-law.html" data-key="service6">WILL</a></h4>
                                                     </div>
                                                 </div>
                                             </div>
@@ -354,12 +354,7 @@
                                 <ul>
                                     <li data-key="footer-location1"><strong>Dubai:</strong> Khalid Bin Waleed Road, Bank Street Building, 2nd Floor Office 215, Dubai. PO BOX 21602, United Arab Emirates</li>
                                     <li data-key="footer-phone1">Phone: (+971) 4 355 0004</li>
-                                    <li data-key="footer-email">Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
-                                </ul>
-                                <ul>
-                                    <li data-key="footer-location2"><strong>Paris:</strong> 39Bis, Boulevard Exelmans, 75016 Paris</li>
-                                    <li data-key="footer-phone2">Phone: (+33) 145531996</li>
-                                    <li data-key="footer-email">Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
+                                    <li data-key="footer-email">Email: <a href="mailto: contact@acdlaw.eu"> contact@acdlaw.eu</a></li>
                                 </ul>
                             </div>
                         </div>
