--- a/servises/arbitration-resolution.html
+++ b/servises/arbitration-resolution.html
@@ -119,7 +119,8 @@
                         <div class="single-services section-padding2">
                             <div class="details-caption">
                                 <h3 data-key="service7">ARBITRATION & DISPUTE RESOLUTION</h3>
-                                <p class="mb-50" data-key="service7-description">Arbitration Law governs the process of resolving disputes outside of traditional courts, where parties agree to submit their conflict to one or more neutral arbitrators whose decision (award) is legally binding. It provides a framework for arbitration agreements, the conduct of proceedings, and enforcement of arbitral awards, ensuring efficiency, fairness, and finality in dispute resolution.</p>
+                                <p class="mb-50" data-key="service7-description">DIFC Courts were established in 2004 by His Highness (Late) Sheikh Maktoum bin Rashid Al Maktoum, then Ruler of Dubai, as an independent judicial system based on English common law. They serve international institutions operating in Dubai and the UAE, handling local and international civil and commercial disputes.
+                                    Similarly, the Abu Dhabi Global Market (ADGM) Courts, launched on 30 May 2016, aim to position ADGM as a key forum for international business. As common-law courts modeled after the English court system, they adjudicate civil and commercial disputes. ADGM is the first jurisdiction in the Middle East to apply English Common Law directly, following the approach of Singapore and Hong Kong, ensuring its regulations incorporate English Common Law principles, including equity rules.</p>
                                 <!-- Styled List -->
                                 <h3 class="mt-5" data-key="service7-key">Key areas of this law include:</h3>
                                 <ul class="styled-list">
@@ -162,12 +163,7 @@
                                 <ul>
                                     <li data-key="footer-location1"><strong>Dubai:</strong> Khalid Bin Waleed Road, Bank Street Building, 2nd Floor Office 215, Dubai. PO BOX 21602, United Arab Emirates</li>
                                     <li data-key="footer-phone1">Phone: (+971) 4 355 0004</li>
-                                    <li data-key="footer-email">Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
-                                </ul>
-                                <ul>
-                                    <li data-key="footer-location2"><strong>Paris:</strong> 39Bis, Boulevard Exelmans, 75016 Paris</li>
-                                    <li data-key="footer-phone2">Phone: (+33) 145531996</li>
-                                    <li data-key="footer-email">Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
+                                    <li data-key="footer-email">Email: <a href="mailto: contact@acdlaw.eu"> contact@acdlaw.eu</a></li>
                                 </ul>
                             </div>
                         </div>
