--- a/servises/familly-law.html
+++ b/servises/familly-law.html
@@ -119,19 +119,17 @@
                         <div class="single-services section-padding2">
                             <div class="details-caption">
                                 <h3 data-key="service8">Family Law?</h3>
-                                <p class="mb-50" data-key="service8-description">Family Law is the branch of law that deals with legal matters concerning family relationships, such as marriage, divorce, child custody, alimony, and inheritance. It addresses the rights and responsibilities of individuals within family structures, with sensitivity to cultural, religious, and social dynamics.</p>
+                                <p class="mb-50" data-key="service8-description">Family Law governs legal matters related to family , including but not limited to marriage, divorce, child custody, alimony, and inheritance.</p>
                                 <!-- Styled List -->
                                 <h3 class="mt-5" data-key="service8-key">Key areas of company law include:</h3>
                                 <ul class="styled-list">
-                                    <li data-key="service8-item1">Divorce Proceedings: Legal processes for dissolving marriages and resolving related disputes.</li>
-                                    <li data-key="service8-item2">Child Custody and Visitation: Determining parenting arrangements and visitation rights.</li>
-                                    <li data-key="service8-item3">Alimony and Financial Support: Establishing financial support for spouses and dependents.</li>
-                                    <li data-key="service8-item4">Inheritance and Wills: Drafting and execution of wills and inheritance distribution.</li>
-                                    <li data-key="service8-item5">Adoption and Guardianship: Legal processes for adopting or establishing guardianship of children.</li>
-                                    <li data-key="service8-item6">Marriage Contracts: Legal documentation and agreements for marriage, including prenuptial contracts.</li>
+                                    <li data-key="service8-item1">Legal Influence: Based on civil law and Sharia principles, with separate provisions for Muslims and non-Muslims.</li>
+                                    <li data-key="service8-item2">Governing Law: Federal Law No. 28 of 2005 (amended by Federal Law No. 41 of 2024) regulates personal affairs.</li>
+                                    <li data-key="service8-item3">Covered Matters: Marriage, divorce, fostering, legal capacity, tutelage, guardianship, and wills.</li>
+                                    <li data-key="service8-item4">Applicability: The law applies to all UAE nationals, while non-Muslim UAE nationals may follow special provisions for their community, and non-citizens can request their home country's laws for succession and inheritance.</li>
                                 </ul>                                                                                    
                                 <h3 data-key="service-title"><br>Our service:</h3>
-                                <p data-key="service8-content">At Acker Choquette Dray Legal Consultants, our expert legal team excels in all aspects of Family Law, providing tailored services for both Muslim and non-Muslim clients. We handle divorce cases and related matters such as alimony, child custody, and visitation, ensuring sensitivity to diverse cultural and legal frameworks. Our services extend to drafting and registering wills for both Muslims and non-Muslims, navigating regulatory complexities to safeguard your legacy. We also offer comprehensive guidance on inheritance and legacy planning, prioritizing our clients' interests and ensuring the seamless resolution of their cases. Trust us to deliver compassionate, professional, and effective representation in safeguarding your family's future.</p>
+                                <p data-key="service8-content">Our team works closely with local correspondents who represent clients before UAE courts, ensuring that all family-related legal matters, including divorce proceedings, legacy issues, and custody arrangements, are handled with the atmost care and sensitivity to both legal requirements and cultural nuances.</p>
                                  <!-- Add Contact Button -->
                                 <div class="contact mt-4">
                                     <a href="../contact.html" class="contact-btn">
@@ -164,12 +162,7 @@
                                 <ul>
                                     <li data-key="footer-location1"><strong>Dubai:</strong> Khalid Bin Waleed Road, Bank Street Building, 2nd Floor Office 215, Dubai. PO BOX 21602, United Arab Emirates</li>
                                     <li data-key="footer-phone1">Phone: (+971) 4 355 0004</li>
-                                    <li data-key="footer-email">Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
-                                </ul>
-                                <ul>
-                                    <li data-key="footer-location2"><strong>Paris:</strong> 39Bis, Boulevard Exelmans, 75016 Paris</li>
-                                    <li data-key="footer-phone2">Phone: (+33) 145531996</li>
-                                    <li data-key="footer-email">Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
+                                    <li data-key="footer-email">Email: <a href="mailto: contact@acdlaw.eu"> contact@acdlaw.eu</a></li>
                                 </ul>
                             </div>
                         </div>
