--- a/servises/tax-law.html
+++ b/servises/tax-law.html
@@ -119,7 +119,7 @@
                 <div class="single-services section-padding2">
                     <div class="details-caption">
                         <h3 data-key="service5">Tax Law</h3>
-                        <p class="mb-50" data-key="service5-description">Our law firm in the UAE provides expert tax law services to help businesses navigate the complexities of VAT registration, tax compliance, and financial management. We offer comprehensive support across core operations, accounting, IT, and financial management, ensuring that your company meets all regulatory requirements. Our team of highly qualified and experienced tax lawyers in Dubai, Abu Dhabi, and throughout the UAE specializes in both domestic and cross-border tax issues, including VAT, income tax returns, and more. Clients trust our expertise to manage complex, high-value, and sensitive tax matters, ensuring the best outcomes for their business. Whether you're facing routine tax matters or complex legal challenges, our legal consultants are ready to provide tailored, results-oriented advice.</p>
+                        <p class="mb-50" data-key="service5-description">At Acker Choquette Dray Legal Consultants, we provide expert guidance on all aspects of tax law to help businesses navigate the complexities of VAT registration, corporate tax registration, tax compliance, and cross-border tax issues. . We handle everything from routine VAT filings to complex tax disputes, ensuring your business remains compliant and protected from unnecessary risks. </p>
                         <!-- Styled List -->
                         <h3 class="mt-5" data-key="service5-key">Key areas of our tax law services include:</h3>
                         <ul class="styled-list">
@@ -131,7 +131,7 @@
                             <li data-key="service5-item6">Financial Management: Advising on accounting, financial reporting, and structuring tax-efficient business operations.</li>
                         </ul>                                                                         
                         <h3 data-key="service-title"><br>Our service</h3>
-                        <p data-key="service5-content">At Acker Choquette Dray Legal Consultants, we provide expert guidance on all aspects of **tax law** to help businesses navigate the complexities of VAT registration, tax compliance, and cross-border tax issues. Whether you're a local business or an international company operating in the UAE, our team of skilled tax lawyers is here to provide tailored, results-driven advice. We handle everything from routine VAT filings to complex tax disputes, ensuring your business remains compliant and protected from unnecessary risks. Trust our expertise to help you achieve the best possible outcomes in your tax matters.</p>
+                        <p data-key="service5-content">Our team of experts includes correspondents in France, the UK, and Israel, providing specialized guidance on bilateral treaties, cross-border assets transfers, relocations, and compliance.</p>
                          <!-- Add Contact Button -->
                         <div class="contact mt-4">
                             <a href="../contact.html" class="contact-btn">
@@ -166,12 +166,7 @@
                                 <ul>
                                     <li data-key="footer-location1"><strong>Dubai:</strong> Khalid Bin Waleed Road, Bank Street Building, 2nd Floor Office 215, Dubai. PO BOX 21602, United Arab Emirates</li>
                                     <li data-key="footer-phone1">Phone: (+971) 4 355 0004</li>
-                                    <li data-key="footer-email">Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
-                                </ul>
-                                <ul>
-                                    <li data-key="footer-location2"><strong>Paris:</strong> 39Bis, Boulevard Exelmans, 75016 Paris</li>
-                                    <li data-key="footer-phone2">Phone: (+33) 145531996</li>
-                                    <li data-key="footer-email">Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
+                                    <li data-key="footer-email">Email: <a href="mailto: contact@acdlaw.eu"> contact@acdlaw.eu</a></li>
                                 </ul>
                             </div>
                         </div>
