--- a/team/member2.html
+++ b/team/member2.html
@@ -124,8 +124,17 @@
             <div class="support-caption">
                 <p class="pera-top" data-key="team-job1">Advocates & Legal Consultant</p>
                 <p data-key="team2-desc" class="pera-bottom">
-                    <a href="../team/jordana-dray.html">Jordana Dray</a> is an internationally experienced legal expert specializing in cross-border matters and complex litigation. She has worked in Paris at <a href="https://www.independent.co.uk/news/obituaries/olivier-metzner-defence-lawyer-who-became-the-most-respected-and-feared-of-his-generation-8539730.html" target="_blank">Olivier Metzner LLP</a> and <a href="https://kaminskilawfirm.com/en" target="_blank">D.O. Kaminski LLP</a>, in Israel with <a href="https://meitar.com/en/" target="_blank">Meitar Liquvornik Geva Leshem</a> and Professor Yuval Levy, <a href="#">Jordana Dray</a> started her own boutique firm in Paris before joining Acker Parallele with <a href="https://binmeshar.com/" target="_blank">Binmes’har & Co</a> in the UAE as a partner before joining <a href="../index.html">ACD LAW</a>. <br> She leverages her global expertise to help individuals and companies navigate legal challenges between Europe and the Middle East. Fluent in French, English, and Hebrew, she is a trusted advisor in international law.
-                </p>
+                    <a href="../team/jordana-dray.html">Jordana Dray</a> is an internationally accomplished legal expert specializing in cross-border matters and complex litigation. She has worked in Paris at 
+                    <a href="https://www.independent.co.uk/news/obituaries/olivier-metzner-defence-lawyer-who-became-the-most-respected-and-feared-of-his-generation-8539730.html" target="_blank">Olivier Metzner LLP</a> 
+                    and <a href="https://kaminskilawfirm.com/en" target="_blank">D.O. Kaminski LLP</a>, in Israel with 
+                    <a href="https://meitar.com/en/" target="_blank">Meitar Liquvornik Geva Leshem</a> and Professor Yuval Levy.  
+                
+                    In 2013, she founded her own boutique firm in Paris before joining 
+                    <a href="https://binmeshar.com/" target="_blank">Binmes’har & Co</a> in the UAE as a partner in 2022. In 2024, she joined Acker Choquette to create 
+                    <a href="../index.html">ACD Law</a>.  
+                
+                    She leverages her global expertise to help individuals and companies navigate legal challenges between Europe and the Middle East. Fluent in French, English, and Hebrew, she is a trusted advisor in international law.
+                </p>                              
                 <a href="../services.html" class="btn red-btn2" data-key="service-title">Our Services</a>
             </div>
 
@@ -157,8 +166,9 @@
                 <div class="achievements-content">
                     <ul class="achievement-list">
                         <li><i class="fas fa-check-circle" data-key="team2-item1"> Member of Paris Bar Association. </i>
-                        <li><i class="fas fa-check-circle" data-key="team2-item2"> Solicitor of the Senior Courts of England and Wales. </i>
-                        <li><i class="fas fa-check-circle" data-key="team2-item3"> Dubai Legal Consultant. </i>
+                        <li><i class="fas fa-check-circle" data-key="team2-item2"> DIFC Registered Practitioner. </i>
+                        <li><i class="fas fa-check-circle" data-key="team2-item3"> ADGM Registered Practitioner. </i>
+                        <li><i class="fas fa-check-circle" data-key="team2-item3"> ICC (International Criminal Court in the Hague) listed counsel. </i>
                         <li><i class="fas fa-check-circle" data-key="team2-item5"> DIFC will draftsmen. </i>
                         <li><i class="fas fa-check-circle" data-key="team2-item5"> ADGM Courts (Abu Dhabi) registered practitioner. </i>
                     </ul>
@@ -301,12 +311,7 @@
                                 <ul>
                                     <li data-key="footer-location1"><strong>Dubai:</strong> Khalid Bin Waleed Road, Bank Street Building, 2nd Floor Office 215, Dubai. PO BOX 21602, United Arab Emirates</li>
                                     <li data-key="footer-phone1">Phone: (+971) 4 355 0004</li>
-                                    <li data-key="footer-email">Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
-                                </ul>
-                                <ul>
-                                    <li data-key="footer-location2"><strong>Paris:</strong> 39Bis, Boulevard Exelmans, 75016 Paris</li>
-                                    <li data-key="footer-phone2">Phone: (+33) 145531996</li>
-                                    <li data-key="footer-email">Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
+                                    <li data-key="footer-email">Email: <a href="mailto: contact@acdlaw.eu"> contact@acdlaw.eu</a></li>
                                 </ul>
                             </div>
                         </div>
