--- a/servises/criminal-law.html
+++ b/servises/criminal-law.html
@@ -119,19 +119,18 @@
                 <div class="single-services section-padding2">
                     <div class="details-caption">
                         <h3 data-key="service3">Criminal Law</h3>
-                        <p class="mb-50" data-key="service3-description">Our criminal law and compliance services in the UAE are designed to provide expert guidance and robust defense. With a deep understanding of the complexities of UAE criminal law and the Dubai justice system ensures comprehensive support throughout every stage of your case. From sound legal advice to developing effective, tailored defense strategies, we are committed to protecting your rights and achieving the best possible outcomes.</p>
+                        <p class="mb-50" data-key="service3-description">Our criminal law and compliance services in the UAE are designed to provide expert guidance and robust defense. With a deep understanding of the complexities of UAE criminal law and the Justice System ensures comprehensive support throughout every stage of your case. From sound legal advice to developing effective, tailored defense strategies, we are committed to protecting your rights and achieving the best possible outcomes.</p>
                         <!-- Styled List -->
                         <h3 class="mt-5" data-key="service3-key">Key areas of our criminal law services include:</h3>
                         <ul class="styled-list">
-                            <li data-key="service3-item1">Criminal Defense: Representing clients in criminal cases to safeguard their rights and ensure a fair trial.</li>
-                            <li data-key="service3-item2">Legal Advice: Providing expert legal counsel on criminal matters to help clients understand their options.</li>
-                            <li data-key="service3-item3">Investigation Support: Assisting in the investigation phase by ensuring all evidence is handled properly and fairly.</li>
-                            <li data-key="service3-item4">Appeals: Representing clients in appeals to challenge unfair convictions or sentences.</li>
-                            <li data-key="service3-item5">Compliance: Ensuring compliance with UAE laws, regulations, and procedures throughout the criminal process.</li>
-                            <li data-key="service3-item6">Case Management: Offering complete support throughout the legal process, from arrest to trial and sentencing.</li>
+                            <li data-key="service3-item1">Criminal Defense and Victim Indemnification: Representing clients in criminal cases to safeguard their rights and ensure a fair trial, including in extradition proceedings, Interpol Red Notices, and arrest warrant matters.</li>
+                            <li data-key="service3-item2">Legal Advice: Providing expert legal opinion regarding criminal matters to help clients understand their options.</li>
+                            <li data-key="service3-item4">Case Management: Offering complete support throughout the legal process, from arrest to trial and sentencing.</li>
+                            <li data-key="service3-item5">Appeals: Representing clients in appellate proceedings before various courts including the Court of First Instance, Court of Appeal, and the Supreme Court to challenge unfair convictions or sentences.</li>
+                            <li data-key="service3-item6">Compliance: Ensuring compliance with UAE laws, regulations, and procedures throughout the criminal process.</li>
                         </ul>                                                                         
                         <h3 data-key="service-title"><br>Our service</h3>
-                        <p data-key="service3-content">At Acker Choquette Dray Legal Consultants, we specialize in criminal law, offering expert defense strategies and legal advice in the UAE. Our experienced legal team is committed to providing robust representation in criminal cases, whether you're facing charges or need assistance with compliance issues. We guide clients through every stage of the criminal justice process, ensuring that their rights are protected and their best interests are upheld. Let us help you navigate the complexities of criminal law in the UAE and achieve the most favorable outcome possible.</p>
+                        <p data-key="service3-content">At Acker Choquette Dray Legal Consultants, we specialize in criminal law, offering expert defense strategies and legal advice in the UAE. Our experienced legal team is committed to providing robust representation in criminal cases. We guide clients through every stage of the criminal justice process, ensuring that their rights are protected and their best interests are upheld. All procedures are handled in collaboration with local attorneys representing clients infront of UAE Courts</p>
                          <!-- Add Contact Button -->
                         <div class="contact mt-4">
                             <a href="../contact.html" class="contact-btn">
@@ -165,12 +164,7 @@
                                 <ul>
                                     <li data-key="footer-location1"><strong>Dubai:</strong> Khalid Bin Waleed Road, Bank Street Building, 2nd Floor Office 215, Dubai. PO BOX 21602, United Arab Emirates</li>
                                     <li data-key="footer-phone1">Phone: (+971) 4 355 0004</li>
-                                    <li data-key="footer-email">Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
-                                </ul>
-                                <ul>
-                                    <li data-key="footer-location2"><strong>Paris:</strong> 39Bis, Boulevard Exelmans, 75016 Paris</li>
-                                    <li data-key="footer-phone2">Phone: (+33) 145531996</li>
-                                    <li data-key="footer-email">Email: <a href="mailto: contact@acd@legallaw.eu"> contact@acd@legallaw.eu</a></li>
+                                    <li data-key="footer-email">Email: <a href="mailto: contact@acdlaw.eu"> contact@acdlaw.eu</a></li>
                                 </ul>
                             </div>
                         </div>
