--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                                     </div>
                                                     <div class="project-cap">
                                                         <a href="servises/WILL-law.html" class="plus-btn"><i class="fas fa-home"></i></a>
-                                                       <h4><a href="servises/WILL-law.html" data-key="service6">WILL</a></h4>
+                                                       <h4><a href="servises/wills-law.html" data-key="service6">WILL</a></h4>
                                                     </div>
                                                 </div>
                                             </div>
