--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <div class="col-lg-11">
                                 <div class="hero__caption">
                                     <h1 data-animation="fadeInUp" data-delay=".5s" data-key="hero-title">
-                                        An innovative and client-focused law firm.<br>
+                                        An innovative and client-focused <br>
                                     </h1>
                                     <div class="hero-text2 mt-110" data-animation="fadeInUp" data-delay=".9s">
                                         <span><a data-key="hero-title1" href="services.html">UAE based Firm.
